SANC-70: More Fixes to Address Feedback
- Removed an unneeded Text element
- Cleaned up style definitions for .forgotPass by having it extend overlapping styles from another element
- Removed unneeded styling for .forgotPass
- Added styling to .forgotPass to account for an error where the user could click on the link from the right side of the form

--- a/src/app/login/Login.module.scss
+++ b/src/app/login/Login.module.scss
@@ -40,23 +40,21 @@ $text-line-height: 1;
   line-height: $text-line-height;
 }
 
-.dontHaveAcc {
+.links {
   font-size: $text-size;
   color: $color-cobalt-blue;
   line-height: $text-line-height;
 }
 
 .contactAdmin {
-  @extend .dontHaveAcc;
+  @extend .links;
   text-decoration: underline;
 }
 
 .forgotPass {
-  color: $color-cobalt-blue;
-  font-size: $text-size;
-  padding-top: 3.5px;
-  padding-bottom: 4px;
-  line-height: $text-line-height;
+  @extend .links;
+  width: fit-content;
+  white-space: nowrap;
 }
 
 .form {
